--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title></title>
-    </head>
-  </html>
+ <html class="no-js">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Testing</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <h1>HELLO</h1>
+    <script src="/lib/angular/angular.min.js"></script>
+  </body>
+</html>
