--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1>HELLO</h1>
+    <div ng-app="mean101">
+      <div ng-controller="main">
+        <h1>{{title}}</h1>
+      </div>
+    </div>
+
     <script src="/lib/angular/angular.min.js"></script>
+    <script src="/app/main.js"></script>
   </body>
 </html>
