--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,18 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Testing</title>
+  <link rel="stylesheet" type="" href="/lib/bootstrap/dist/css/bootstrap.min.css">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <div ng-app="mean101">
-    <div ng-controller="main">
-      <h1>{{title}}</h1>
+    <div class="container">
+      <div ng-controller="main">
+        <h1>{{title}}</h1>
+      </div>
+
     </div>
   </div>
 
