--- a/client/index.html
+++ b/client/index.html
@@ -13,14 +13,16 @@
 <body>
   <div ng-app="mean101">
     <div class="container">
-      <div ng-controller="main">
-        <h1>{{title}}</h1>
-      </div>
+      <div ng-view>
 
+      </div>
     </div>
+
+  </div>
   </div>
 
   <script src="/lib/angular/angular.min.js"></script>
+  <script src="/lib/angular-route/angular-route.min.js"></script>
   <script src="/app/main.js"></script>
 </body>
 
