--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
 
   <script src="/lib/angular/angular.min.js"></script>
   <script src="/lib/angular-route/angular-route.min.js"></script>
+  <script src="/lib/socket.io-client/socket.io.js"></script>
   <script src="/app/main.js"></script>
 </body>
 
